[gd_scene load_steps=6 format=3 uid="uid://s8ecjys3uo5r"]

[ext_resource type="Script" path="res://screens/Configuration.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://s6qsp8h7wwdc" path="res://assets/discord-mark-blue.svg" id="2_8ur3c"]
[ext_resource type="PackedScene" uid="uid://wudkjg1jepr8" path="res://screens/VersionChecker.tscn" id="2_b6l4f"]
[ext_resource type="Texture2D" uid="uid://bayocporklrfi" path="res://assets/app-icon.svg" id="3_0ch32"]
[ext_resource type="Texture2D" uid="uid://cob3xf8lx5jrx" path="res://assets/GitHub_Logo_White.png" id="4_bypys"]

[node name="Configuration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]This tool is limited in that only Chinese characters can be extracted and translated.
So you can translate only from Chinese to your preffered language. 

WARNING: This tool overrides contents of Text/MTL directory of the game each time you select directory you want to translate.[/center]
"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SelectGameButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Select Game.exe in LonaRPG directory"

[node name="LanguageOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
tooltip_text = "By selecting an option the content of MTL directory will be replaced with content of chosen directory.

That means if you already finished position, then selecting an option will delete it."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="GoogleTranslateButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Google translate"

[node name="ManualTranslateButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Manual translate"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="DiscordLink" type="LinkButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Join comunity Discord server"
uri = "https://discord.gg/dpUnakhZ5h"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/DiscordLink"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_8ur3c")
expand_mode = 2
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="ItchLink" type="LinkButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Project page on Itch.io"
uri = "https://tetragramat.itch.io/lonarpg-mtl"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/ItchLink"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_0ch32")
expand_mode = 2
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="GithubLink" type="LinkButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
tooltip_text = "Source code on Github"
uri = "https://github.com/Tetragramat/LonaRPG-translation-tool"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/GithubLink"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 40.0
texture = ExtResource("4_bypys")
expand_mode = 2
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="VersionChecker" parent="." instance=ExtResource("2_b6l4f")]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 5.0
offset_bottom = 5.0

[node name="AlwaysOnTopButton" type="CheckButton" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -252.0
offset_top = -40.0
focus_mode = 0
text = "Window always on top"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(800, 500)
theme_override_colors/folder_icon_color = Color(1, 0.827451, 0.0705882, 1)
theme_override_colors/file_icon_color = Color(1, 0.309804, 0.309804, 1)
ok_button_text = "Otevřít"
file_mode = 0
access = 2
filters = PackedStringArray("Game.exe")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/SelectGameButton" to="." method="_on_SelectGameButton_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/LanguageOptionButton" to="." method="_on_LanguageOptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/GoogleTranslateButton" to="." method="_on_GoogleTranslateButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/ManualTranslateButton" to="." method="_on_ManualTranslateButton_pressed"]
[connection signal="toggled" from="AlwaysOnTopButton" to="." method="_on_AlwaysOnTopButton_toggled"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
